Add Auto Crafter

--- a/machines/src/main/resources/assets/lang/en_us.json
+++ b/machines/src/main/resources/assets/lang/en_us.json
@@ -38,6 +38,8 @@
     "block.machines.deepslate_star_shards_ore": "Deepslate Star Shards Ore",
     "block.machines.star_dust_block": "Block of Star Dust",
     "block.machines.crystallizer": "Crystallizer",
+    "block.machines.auto_crafter": "Auto Crafter",
+    "block.machines.auto_crafter.inv_window.title": "Internal Inventory",
     "item.machines.star_sword": "Star Sword",
     "item.machines.star_shovel": "Star Shovel",
     "item.machines.star_pickaxe": "Star Pickaxe",
@@ -146,6 +148,7 @@
     "menu.machines.potion_configurator.potion_type.splash": "Potion Type: Splash",
     "menu.machines.potion_configurator.potion_type.lingering": "Potion Type: Lingering",
     "menu.machines.crystallizer.idle": "Crystallizing...",
+    "menu.machines.auto_crafter.inventory": "Inventory",
     "advancement.machines.root.title": "Machines",
     "advancement.machines.block_breaker.title": "Automated Block Breaking",
     "advancement.machines.block_breaker.description": "Craft a Block Breaker",
