--- a/vanilla-hammers/src/main/resources/assets/lang/en_us.json
+++ b/vanilla-hammers/src/main/resources/assets/lang/en_us.json
@@ -14,6 +14,7 @@
   "item.vanilla_hammers.prismarine_hammer": "Prismarine Hammer",
   "item.vanilla_hammers.slime_hammer": "Slime Hammer",
   "item.vanilla_hammers.ender_hammer": "Ender Hammer",
+  "enchantment.vanilla_hammers.curse_of_gigantism": "Curse of Gigantism",
   "advancement.vanilla_hammers.root.title": "Vanilla Hammers",
   "advancement.vanilla_hammers.stone_hammer.title": "Rock Solid Hammer",
   "advancement.vanilla_hammers.slime_hammer.title": "Bouncy Weapon",
